<resources>
    <string name="app_name">Week3_Project_V2</string>


    <string name="tab_home">홈</string>
    <string name="tab_search">검색</string>
    <string name="tab_order_list">주문내역</string>
    <string name="tab_my_page">마이요기요</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="activity_life_cycle_dialog">다이얼로그</string>
    <string name="start_new_activity">새로운 액티비티로 이동</string>


    <string name="and_frg_life_cycle">액티비티와 프래그먼트의 \n생명주기 테스트와 통신</string>


    <string name="fragment_nav">BottomNavigation과 \nFragNav 라이브러리 적용 \nsample 앱</string>
    <string name="btn_communicate_activity_with_frag">액티비티와 프래그먼트의 통신</string>
    <string name="title_activity_bottom_navigation">BottomNavigationActivity</string>
    <string name="home_fragment_text">홈 프래그먼트입니다</string>
    <string name="my_page_fragment_text">마이요기요 프래그먼트입니다</string>
    <string name="odder_list_fragment_text">주문 내역 프래그먼트입니다</string>
    <string name="search_fragment_text">검색 프래그먼트입니다</string>
    <string name="communicate_with_sec_fragment">두번째 프래그먼트와 통신</string>
    <string name="communicate_with_fst_fragment">첫번째 프래그먼트와 통신</string>

    <string name="fst_fragment">첫번째 프래그먼트입니다</string>
    <string name="sec_fragment">두번째 프래그먼트입니다</string>
    <string name="communicate_message">메세지</string>
    <string name="activity_life_cycle_test">액티비티 생명주기 테스트</string>
    <string name="communicate_with_activity">액티비티와 통신하기</string>
    <string name="communicate_success">communicate success</string>
    <string name="text_ok_button">ok</string>
    <string name="text_fragment">FRAGMENT</string>
    <string name="text_result_from_activity">activity로부터의 결과 :</string>
    <string name="text_activity">ACTIVITY</string>
    <string name="text_result_from_fragment">fragment로부터의 결과 :</string>


</resources>
