<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".assignment_1_activity_fragment.LifeCycleFstFragment">

    <!-- TODO: Update blank fragment layout -->

    <Button
        android:id="@+id/do_communicate_with_sec_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:text="@string/communicate_with_activity" />

    <Button
        android:id="@+id/do_start_new_activity_in_frag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_marginTop="50dp"
        android:text="@string/start_new_activity" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/fst_fragment"
        android:textSize="30dp" />


</FrameLayout>