<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_do_start_activity_frg_lifecycle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_life_cycle_test"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@id/btn_do_start_frag_lifecycle"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_do_start_frag_lifecycle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/and_frg_life_cycle"
        android:textSize="20dp"
        app:layout_constraintTop_toBottomOf="@id/btn_do_start_activity_frg_lifecycle" />

    <Button
        android:id="@+id/btn_do_start_frag_nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fragment_nav"
        android:textSize="20dp"
        app:layout_constraintTop_toBottomOf="@id/btn_do_start_frag_lifecycle" />

</androidx.constraintlayout.widget.ConstraintLayout>