<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_green_light"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".assignment_1_additional.FirstFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/text_fragment"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_first_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp" />

    <Button
        android:id="@+id/btn_ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_ok_button"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_result_from_activity"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_from_activity_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp" />


</LinearLayout>