<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".assignment_1_additional.ViewModelTestActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/text_activity"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_activity_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn_activity_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_ok_button"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_result_from_fragment"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_from_fragment_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp" />


    </LinearLayout>

    <FrameLayout
        android:id="@+id/first_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

    </FrameLayout>

</LinearLayout>